[gd_scene load_steps=8 format=2]

[ext_resource path="res://screens/main/main.gd" type="Script" id=1]
[ext_resource path="res://bat/projectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://bat/bat.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/main/background.png" type="Texture" id=4]
[ext_resource path="res://organ/organ.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 170 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 250, 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 240, 160 )
texture = ExtResource( 4 )

[node name="Projectile" parent="." instance=ExtResource( 2 )]

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( -5, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 485, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 3 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 240, 325 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 4 )

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2( 240, -5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource( 4 )

[node name="Bat" parent="." instance=ExtResource( 3 )]
position = Vector2( 149.669, 299.807 )

[node name="Organ" parent="." instance=ExtResource( 5 )]
position = Vector2( 97.5438, 113.645 )
organ_type = 1

[node name="Organ3" parent="." instance=ExtResource( 5 )]
position = Vector2( 237.35, 74.5533 )
organ_type = 1

[node name="Organ4" parent="." instance=ExtResource( 5 )]
position = Vector2( 160.524, 63.4232 )
organ_type = 1

[node name="Organ2" parent="." instance=ExtResource( 5 )]
position = Vector2( 349.065, 112.476 )
organ_type = 2

[node name="Audio" type="AudioStreamPlayer" parent="."]
[connection signal="collided" from="Projectile" to="Bat" method="_on_Projectile_collided"]
[connection signal="collided" from="Projectile" to="." method="_on_Projectile_collided"]
